# Spacedrop

./: .env  .gitignore  .gitmodules  LICENSE  README.md  Spacedrop.shortcut  server.py
C_Release/: -  .env  CMakeLists.txt  C_Release.md  Makefile  hello.c
C_Release/modules/auth_module/: auth_module.c  auth_module.h
C_Release/modules/clip_module/: clip_module.c  clip_module.h
C_Release/modules/drop_module/: drop_module.c  drop_module.h
C_Release/modules/env_module/: env_module.c  env_module.h
C_Release/modules/pages_module/: pages_module.c  pages_module.h
Python_Release/: server.py
Python_Release/helpers/: config_helper.py  shell_helper.py  userid_helper.py
helpers/: config_helper.py  shell_helper.py  userid_helper.py
iOS_Shortcuts/: Clipboard.shortcut  Spacedrop.shortcut
